# DeviceStatsReporter

./: Cargo.toml  LICENSE
devops/docker/: Dockerfile  docker-compose.yml
devops/docker/data/: definitions.json  enabled_plugins
resources/test/bad/: bad_check_interval.yaml  too_high_check_interval.yaml  unrecognized_runtime_mode.yaml
resources/test/good/: bare_continuous.yaml  bare_single.yaml  full_continuous.yaml  full_single.yaml  ideal_continuous.yaml  ideal_standalone.yaml
src/: main.rs
src/lib/: common.rs  config.rs  mod.rs  report.rs  runner.rs
