[package]
name = "device_stats_reporter"
version = "0.1.0"
authors = ["Severn Everett <severn.everett@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[dependencies]
config = "0.11.0"
ctrlc = "3.1.9"
sysinfo = "0.17.4"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "0.7.2"
