[package]
name = "device_stats_reporter"
version = "0.1.0"
authors = ["Severn Everett <severn.everett@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[dependencies]
config = "0.11.0"
ctrlc = "3.1.9"
lz4_flex = "0.8.0"
paho-mqtt = "0.9.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sysinfo = "0.17.4"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "0.7.2"
